# MultiEffekt-Plugin

./: CMakeLists.txt  README.md  build.py
Source/: Parameters.h  PluginProcessor.cpp  PluginProcessor.h
plugin/: CMakeLists.txt
plugin/Buffer/: CircularBuffer.cpp  CircularBuffer.h
plugin/Effects/: Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  EffectBase.h  MonoPanner.cpp  MonoPanner.h  Panner.cpp  Panner.h  PannerBase.h  PannerManager.cpp  PannerManager.h  StereoPanner.cpp  StereoPanner.h
plugin/Effects/Delay/: Delay.cpp  Delay.h
plugin/Effects/Distortion/: Distortion.cpp  Distortion.h
plugin/Effects/Panner/: MonoPanner.cpp  MonoPanner.h  PannerBase.h  PannerManager.cpp  PannerManager.h  StereoPanner.h
plugin/Effects/ParametricEQ/: ParametricEQ.cpp  ParametricEQ.h
plugin/Misc/: Parameters.h
plugin/Processor/: PluginProcessor.cpp  PluginProcessor.h
plugin/Source/: CircularBuffer.cpp  Distortion.cpp  PluginEditor.cpp  PluginProcessor.cpp
plugin/UI/: PluginEditor.cpp  PluginEditor.h
plugin/include/: CircularBuffer.h  Distortion.h  Parameters.h  PluginEditor.h  PluginProcessor.h
test/: CMakeLists.txt
test/source/: DelayTest.cpp  DistortionTest.cpp  PannerTest.cpp  ProcessorTest.cpp
